# clip_intervention

./: .gitignore  README.md  pyproject.toml
configs/: per_layer_edit.yaml
notebooks/: analysis.ipynb
scripts/: apply_edit_and_eval.sh  download_data.sh  eval_zero_shot.sh  fit_direction.sh  scan_layers.sh  setup_env.sh
src/clip_causal_repair/: __init__.py  causal_localize.py  clip_loader.py  feature_edit.py  group_metrics.py  hooks.py  inlp_baseline.py  waterbirds.py  zero_shot.py
tests/: test_smoke.py
