[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-causal-repair"
version = "0.1.0"
description = "Causal repair of a spurious background concept in CLIP on Waterbirds"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "open-clip-torch>=2.24.0",
  "wilds>=2.0.0",
  "einops>=0.7.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
  "matplotlib>=3.7",
  "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ipykernel",
  "jupyter",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
